<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:background="@color/base_them_for_liters"
    tools:context=".EditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/imageButton_Refulling"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="70dp"
            android:background="@color/white"
            android:onClick="goToMain"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton_Money"
            app:layout_constraintEnd_toStartOf="@+id/imageButton_Money"
            app:layout_constraintTop_toTopOf="@+id/imageButton_Money"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/my_gas_station_olive" />

        <ImageButton
            android:id="@+id/imageButton_Money"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:onClick="goToStatistic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/my_money" />

        <ImageButton
            android:id="@+id/imageButton_Settings"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="70dp"
            android:background="@color/white"
            android:onClick="goToSettings"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton_Money"
            app:layout_constraintStart_toEndOf="@+id/imageButton_Money"
            app:layout_constraintTop_toTopOf="@+id/imageButton_Money"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/my_settings" />

        <TextView
            android:id="@+id/textView_Refulling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:maxLines="2"
            android:onClick="goToMain"
            android:singleLine="false"
            android:text="@string/refuelings"
            android:textColor="@color/olive_for_liters"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton_Refulling"
            app:layout_constraintEnd_toEndOf="@+id/imageButton_Refulling"
            app:layout_constraintStart_toStartOf="@+id/imageButton_Refulling"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_Refulling"
            app:layout_constraintWidth_percent="0.33"/>

        <TextView
            android:id="@+id/textView_Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:gravity="center"
            android:maxLines="2"
            android:onClick="goToStatistic"
            android:singleLine="false"
            android:text="@string/generateStatistic"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton_Money"
            app:layout_constraintEnd_toEndOf="@+id/imageButton_Money"
            app:layout_constraintStart_toStartOf="@+id/imageButton_Money"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_Money"
            app:layout_constraintWidth_percent="0.33"/>

        <TextView
            android:id="@+id/textView_Settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:gravity="center"
            android:maxLines="2"
            android:onClick="goToSettings"
            android:singleLine="false"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton_Settings"
            app:layout_constraintEnd_toEndOf="@+id/imageButton_Settings"
            app:layout_constraintStart_toStartOf="@+id/imageButton_Settings"
            app:layout_constraintTop_toBottomOf="@+id/imageButton_Settings"
            app:layout_constraintWidth_percent="0.33"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_white_background"
        android:onClick="goToMain"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:onClick="goToMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/my_back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:onClick="goToMain"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_white_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/howManyLiters"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/howMuchMoney"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/wichMileage"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hintDollars"
            android:inputType="numberDecimal"
            android:textColor="@color/olive_for_liters"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hintMileage"
            android:inputType="number"
            android:textColor="@color/olive_for_liters"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:breakStrategy="high_quality"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/previousMileage"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/editTextText3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/editTextText3"
            app:layout_constraintTop_toTopOf="@+id/editTextText3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/dateToday"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/olive_for_liters"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hintLiters"
            android:inputType="numberDecimal"
            android:textColor="@color/olive_for_liters"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/clickTwo"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/editTextText4"
            app:layout_constraintTop_toTopOf="@+id/editTextText4" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/miles"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="@+id/textView11" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/olive_for_liters"
        android:onClick="onClickSave"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>