<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_statistic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:background="@color/base_them_for_liters"
    tools:context=".GenerateStatistics">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/GS_imageButton_Refulling"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="70dp"
            android:background="@color/white"
            android:onClick="goToMain"
            app:layout_constraintBottom_toBottomOf="@+id/GS_imageButton_Money"
            app:layout_constraintEnd_toStartOf="@+id/GS_imageButton_Money"
            app:layout_constraintTop_toTopOf="@+id/GS_imageButton_Money"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/my_gas_station" />

        <ImageButton
            android:id="@+id/GS_imageButton_Money"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:onClick="goToStatistic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/my_money_olive" />

        <ImageButton
            android:id="@+id/GS_imageButton_Settings"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="70dp"
            android:background="@color/white"
            android:onClick="goToSettings"
            app:layout_constraintBottom_toBottomOf="@+id/GS_imageButton_Money"
            app:layout_constraintStart_toEndOf="@+id/GS_imageButton_Money"
            app:layout_constraintTop_toTopOf="@+id/GS_imageButton_Money"
            app:layout_constraintVertical_bias="0"
            app:srcCompat="@drawable/my_settings" />

        <TextView
            android:id="@+id/GS_textView_Refulling"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:maxLines="2"
            android:onClick="goToMain"
            android:singleLine="false"
            android:text="@string/refuelings"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/GS_imageButton_Refulling"
            app:layout_constraintEnd_toEndOf="@+id/GS_imageButton_Refulling"
            app:layout_constraintStart_toStartOf="@+id/GS_imageButton_Refulling"
            app:layout_constraintTop_toBottomOf="@+id/GS_imageButton_Refulling"
            app:layout_constraintWidth_percent="0.33" />

        <TextView
            android:id="@+id/GS_textView_Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:gravity="center"
            android:maxLines="2"
            android:onClick="goToStatistic"
            android:singleLine="false"
            android:text="@string/generateStatistic"
            android:textColor="@color/olive_for_liters"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/GS_imageButton_Money"
            app:layout_constraintEnd_toEndOf="@+id/GS_imageButton_Money"
            app:layout_constraintStart_toStartOf="@+id/GS_imageButton_Money"
            app:layout_constraintTop_toBottomOf="@+id/GS_imageButton_Money"
            app:layout_constraintWidth_percent="0.33" />

        <TextView
            android:id="@+id/GS_textView_Settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:gravity="center"
            android:maxLines="2"
            android:onClick="goToSettings"
            android:singleLine="false"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/GS_imageButton_Settings"
            app:layout_constraintEnd_toEndOf="@+id/GS_imageButton_Settings"
            app:layout_constraintStart_toStartOf="@+id/GS_imageButton_Settings"
            app:layout_constraintTop_toBottomOf="@+id/GS_imageButton_Settings"
            app:layout_constraintWidth_percent="0.33" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/period"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/startPeriod"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextText_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/olive_for_liters"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/clickTwo"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/editTextText_statistic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/editTextText_statistic"
            app:layout_constraintTop_toTopOf="@+id/editTextText_statistic"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/endPeriod"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText_statistic" />

        <EditText
            android:id="@+id/editTextText6_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/olive_for_liters"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ellipsize="none"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:text="@string/clickTwo"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/editTextText6_statistic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/editTextText6_statistic"
            app:layout_constraintTop_toTopOf="@+id/editTextText6_statistic"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/LitersEndPeriod"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText6_statistic" />

        <EditText
            android:id="@+id/editTextText7_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/hintLiters"
            android:inputType="numberDecimal"
            android:textColor="@color/olive_for_liters"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView25"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/textView25"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button4_statistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/olive_for_liters"
        android:onClick="clickOnGenerate"
        android:text="@string/CalculateStatistics"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout8"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout8"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

</androidx.constraintlayout.widget.ConstraintLayout>